crates/pgls_pretty_print/tests/snapshots/multi/tests__float8_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/float8.sql
---
create temporary table float8_tbl (f1 double precision);

insert into float8_tbl (f1) values ('    0.0   ');

insert into float8_tbl (f1) values ('1004.30  ');

insert into float8_tbl (f1) values ('   -34.84');

insert into float8_tbl (f1) values ('1.2345678901234e+200');

insert into float8_tbl (f1) values ('1.2345678901234e-200');

select cast('10e400' as double precision);

select cast('-10e400' as double precision);

select cast('10e-400' as double precision);

select cast('-10e-400' as double precision);

select float8send(cast('2.2250738585072014E-308' as double precision));

insert into float8_tbl (f1) values ('');

insert into float8_tbl (f1) values ('     ');

insert into float8_tbl (f1) values ('xyz');

insert into float8_tbl (f1) values ('5.0.0');

insert into float8_tbl (f1) values ('5 . 0');

insert into float8_tbl (f1) values ('5.   0');

insert into float8_tbl (f1) values ('    - 3');

insert into float8_tbl (f1) values ('123           5');

select pg_input_is_valid('34.5', 'float8');

select pg_input_is_valid('xyz', 'float8');

select pg_input_is_valid('1e4000', 'float8');

select * from pg_input_error_info('1e4000', 'float8');

select cast('NaN' as double precision);

select cast('nan' as double precision);

select cast('   NAN  ' as double precision);

select cast('infinity' as double precision);

select cast('          -INFINiTY   ' as double precision);

select cast('N A N' as double precision);

select cast('NaN x' as double precision);

select cast(' INFINITY    x' as double precision);

select cast('Infinity' as double precision) + 100.0;

select cast('Infinity' as double precision) / cast('Infinity' as double precision);

select cast('42' as double precision) / cast('Infinity' as double precision);

select cast('nan' as double precision) / cast('nan' as double precision);

select cast('nan' as double precision) / cast('0' as double precision);

select cast(cast('nan' as numeric) as double precision);

select * from float8_tbl;

select f.* from float8_tbl as f where f.f1 <> '1004.3';

select f.* from float8_tbl as f where f.f1 = '1004.3';

select f.* from float8_tbl as f where '1004.3' > f.f1;

select f.* from float8_tbl as f where f.f1 < '1004.3';

select f.* from float8_tbl as f where '1004.3' >= f.f1;

select f.* from float8_tbl as f where f.f1 <= '1004.3';

select f.f1, f.f1 * '-10' as x from float8_tbl as f where f.f1 > '0.0';

select f.f1, f.f1 + '-10' as x from float8_tbl as f where f.f1 > '0.0';

select f.f1, f.f1 / '-10' as x from float8_tbl as f where f.f1 > '0.0';

select f.f1, f.f1 - '-10' as x from float8_tbl as f where f.f1 > '0.0';

select f.f1 ^ '2.0' as square_f1 from float8_tbl as f where f.f1 = '1004.3';

select f.f1, @f.f1 as abs_f1 from float8_tbl as f;

select f.f1, trunc(f.f1) as trunc_f1 from float8_tbl as f;

select f.f1, round(f.f1) as round_f1 from float8_tbl as f;

select ceil(f1) as ceil_f1 from float8_tbl as f;

select ceiling(f1) as ceiling_f1 from float8_tbl as f;

select floor(f1) as floor_f1 from float8_tbl as f;

select sign(f1) as sign_f1 from float8_tbl as f;

set extra_float_digits = 0;

select sqrt(cast('64' as double precision)) as eight;

select |/cast('64' as double precision) as eight;

select f.f1, |/f.f1 as sqrt_f1 from float8_tbl as f where f.f1 > '0.0';

select power(cast('144' as double precision), cast('0.5' as double precision));

select power(cast('NaN' as double precision), cast('0.5' as double precision));

select power(cast('144' as double precision), cast('NaN' as double precision));

select power(cast('NaN' as double precision), cast('NaN' as double precision));

select power(cast('-1' as double precision), cast('NaN' as double precision));

select power(cast('1' as double precision), cast('NaN' as double precision));

select power(cast('NaN' as double precision), cast('0' as double precision));

select power(cast('inf' as double precision), cast('0' as double precision));

select power(cast('-inf' as double precision), cast('0' as double precision));

select power(cast('0' as double precision), cast('inf' as double precision));

select power(cast('0' as double precision), cast('-inf' as double precision));

select power(cast('1' as double precision), cast('inf' as double precision));

select power(cast('1' as double precision), cast('-inf' as double precision));

select power(cast('-1' as double precision), cast('inf' as double precision));

select power(cast('-1' as double precision), cast('-inf' as double precision));

select power(cast('0.1' as double precision), cast('inf' as double precision));

select power(cast('-0.1' as double precision), cast('inf' as double precision));

select power(cast('1.1' as double precision), cast('inf' as double precision));

select power(cast('-1.1' as double precision), cast('inf' as double precision));

select power(cast('0.1' as double precision), cast('-inf' as double precision));

select power(cast('-0.1' as double precision), cast('-inf' as double precision));

select power(cast('1.1' as double precision), cast('-inf' as double precision));

select power(cast('-1.1' as double precision), cast('-inf' as double precision));

select power(cast('inf' as double precision), cast('-2' as double precision));

select power(cast('inf' as double precision), cast('2' as double precision));

select power(cast('inf' as double precision), cast('inf' as double precision));

select power(cast('inf' as double precision), cast('-inf' as double precision));

select power(cast('-inf' as double precision), cast('-2' as double precision)) = '0';

select power(cast('-inf' as double precision), cast('-3' as double precision));

select power(cast('-inf' as double precision), cast('2' as double precision));

select power(cast('-inf' as double precision), cast('3' as double precision));

select power(cast('-inf' as double precision), cast('3.5' as double precision));

select power(cast('-inf' as double precision), cast('inf' as double precision));

select power(cast('-inf' as double precision), cast('-inf' as double precision));

select f.f1, exp(ln(f.f1)) as exp_ln_f1 from float8_tbl as f where f.f1 > '0.0';

select
  exp(cast('inf' as double precision)),
  exp(cast('-inf' as double precision)),
  exp(cast('nan' as double precision));

select ||/cast('27' as double precision) as three;

select f.f1, ||/f.f1 as cbrt_f1 from float8_tbl as f;

select * from float8_tbl;

update float8_tbl set f1 = float8_tbl.f1 * '-1' where float8_tbl.f1 > '0.0';

select f.f1 * '1e200' from float8_tbl as f;

select f.f1 ^ '1e200' from float8_tbl as f;

select 0 ^ 0 + 0 ^ 1 + 0 ^ 0.0 + 0 ^ 0.5;

select ln(f.f1) from float8_tbl as f where f.f1 = '0.0';

select ln(f.f1) from float8_tbl as f where f.f1 < '0.0';

select exp(f.f1) from float8_tbl as f;

select f.f1 / '0.0' from float8_tbl as f;

select * from float8_tbl order by 1;

select sinh(cast('1' as double precision));

select cosh(cast('1' as double precision));

select tanh(cast('1' as double precision));

select asinh(cast('1' as double precision));

select acosh(cast('2' as double precision));

select atanh(cast('0.5' as double precision));

select sinh(cast('infinity' as double precision));

select sinh(cast('-infinity' as double precision));

select sinh(cast('nan' as double precision));

select cosh(cast('infinity' as double precision));

select cosh(cast('-infinity' as double precision));

select cosh(cast('nan' as double precision));

select tanh(cast('infinity' as double precision));

select tanh(cast('-infinity' as double precision));

select tanh(cast('nan' as double precision));

select asinh(cast('infinity' as double precision));

select asinh(cast('-infinity' as double precision));

select asinh(cast('nan' as double precision));

select acosh(cast('-infinity' as double precision));

select acosh(cast('nan' as double precision));

select atanh(cast('infinity' as double precision));

select atanh(cast('-infinity' as double precision));

select atanh(cast('nan' as double precision));

set extra_float_digits = -1;

select
  x,
  erf(x),
  erfc(x)
from
  (
    values
      (cast('-infinity' as double precision)),
      (-28),
      (-6),
      (-3.4),
      (-2.1),
      (-1.1),
      (-0.45),
      (-1.2e-9),
      (-2.3e-13),
      (-1.2e-17),
      (0),
      (1.2e-17),
      (2.3e-13),
      (1.2e-9),
      (0.45),
      (1.1),
      (2.1),
      (3.4),
      (6),
      (28),
      (cast('infinity' as double precision)),
      (cast('nan' as double precision))
  )
  as t (x);

reset extra_float_digits;

set extra_float_digits = -1;

select
  x,
  gamma(x),
  lgamma(x)
from
  (
    values
      (0.5),
      (1),
      (2),
      (3),
      (4),
      (5),
      (cast('infinity' as double precision)),
      (cast('nan' as double precision))
  )
  as t (x);

select gamma(cast('-infinity' as double precision));

select lgamma(cast('-infinity' as double precision));

select gamma(cast('-1000.5' as double precision));

select lgamma(cast('-1000.5' as double precision));

select gamma(cast('-1' as double precision));

select lgamma(cast('-1' as double precision));

select gamma(cast('0' as double precision));

select lgamma(cast('0' as double precision));

select gamma(cast('1000' as double precision));

select lgamma(cast('1000' as double precision));

select lgamma(cast('1e308' as double precision));

reset extra_float_digits;

insert into float8_tbl (f1) values ('10e400');

insert into float8_tbl (f1) values ('-10e400');

insert into float8_tbl (f1) values ('10e-400');

insert into float8_tbl (f1) values ('-10e-400');

drop table float8_tbl;

select * from float8_tbl;

select cast(cast('32767.4' as double precision) as smallint);

select cast(cast('32767.6' as double precision) as smallint);

select cast(cast('-32768.4' as double precision) as smallint);

select cast(cast('-32768.6' as double precision) as smallint);

select cast(cast('2147483647.4' as double precision) as int);

select cast(cast('2147483647.6' as double precision) as int);

select cast(cast('-2147483648.4' as double precision) as int);

select cast(cast('-2147483648.6' as double precision) as int);

select cast(cast('9223372036854773760' as double precision) as bigint);

select cast(cast('9223372036854775807' as double precision) as bigint);

select cast(cast('-9223372036854775808.5' as double precision) as bigint);

select cast(cast('-9223372036854780000' as double precision) as bigint);

select
  x,
  sind(x),
  sind(x) in (-1, -0.5, 0, 0.5, 1) as sind_exact
from
  (
    values
      (0),
      (30),
      (90),
      (150),
      (180),
      (210),
      (270),
      (330),
      (360)
  )
  as t (x);

select
  x,
  cosd(x),
  cosd(x) in (-1, -0.5, 0, 0.5, 1) as cosd_exact
from
  (
    values
      (0),
      (60),
      (90),
      (120),
      (180),
      (240),
      (270),
      (300),
      (360)
  )
  as t (x);

select
  x,
  tand(x),
  tand(x)
  in (
    cast('-Infinity' as double precision), -1, 0, 1, cast('Infinity' as double precision)
  )
  as tand_exact,
  cotd(x),
  cotd(x)
  in (
    cast('-Infinity' as double precision), -1, 0, 1, cast('Infinity' as double precision)
  )
  as cotd_exact
from
  (
    values
      (0),
      (45),
      (90),
      (135),
      (180),
      (225),
      (270),
      (315),
      (360)
  )
  as t (x);

select
  x,
  asind(x),
  asind(x) in (-90, -30, 0, 30, 90) as asind_exact,
  acosd(x),
  acosd(x) in (0, 60, 90, 120, 180) as acosd_exact
from
  (values (-1), (-0.5), (0), (0.5), (1)) as t (x);

select
  x,
  atand(x),
  atand(x) in (-90, -45, 0, 45, 90) as atand_exact
from
  (
    values
      (cast('-Infinity' as double precision)),
      (-1),
      (0),
      (1),
      (cast('Infinity' as double precision))
  )
  as t (x);

select
  x,
  y,
  atan2d(y, x),
  atan2d(y, x) in (-90, 0, 90, 180) as atan2d_exact
from
  (
    select
      10 * cosd(a),
      10 * sind(a)
    from
      generate_series(0, 360, 90) as t (a)
  )
  as t (x, y);

create type xfloat8;

create function xfloat8in(cstring)
returns xfloat8
language internal
immutable
strict
as $function$
int8in
$function$;

create function xfloat8out(xfloat8)
returns cstring
language internal
immutable
strict
as $function$
int8out
$function$;

create type xfloat8 (input = xfloat8in, output = xfloat8out, like = no_such_type);

create type xfloat8 (input = xfloat8in, output = xfloat8out, like = double precision);

create cast (xfloat8 as double precision) without function;

create cast (double precision as xfloat8) without function;

create cast (xfloat8 as bigint) without function;

create cast (bigint as xfloat8) without function;

with
testdata (bits)
as (
  values
    (X'0000000000000001'),
    (X'0000000000000002'),
    (X'0000000000000003'),
    (X'0000000000001000'),
    (X'0000000100000000'),
    (X'0000010000000000'),
    (X'0000010100000000'),
    (X'0000400000000000'),
    (X'0000400100000000'),
    (X'0000800000000000'),
    (X'0000800000000001'),
    (X'00000000000f4240'),
    (X'00000000016e3600'),
    (X'0000008cdcdea440'),
    (X'000ffffffffffff0'),
    (X'000ffffffffffff1'),
    (X'000ffffffffffffe'),
    (X'000fffffffffffff')
)
select
  float8send(flt) as ibits,
  flt
from
  (
    select
      cast(cast(cast(bits as bigint) as xfloat8)
      as double precision)
      as flt
    from
      testdata
    offset 0
  )
  as s;

with
testdata (bits)
as (
  values
    (X'0000000000000000'),
    (X'0010000000000000'),
    (X'0010000000000001'),
    (X'0010000000000002'),
    (X'0018000000000000'),
    (X'3ddb7cdfd9d7bdba'),
    (X'3ddb7cdfd9d7bdbb'),
    (X'3ddb7cdfd9d7bdbc'),
    (X'3e112e0be826d694'),
    (X'3e112e0be826d695'),
    (X'3e112e0be826d696'),
    (X'3e45798ee2308c39'),
    (X'3e45798ee2308c3a'),
    (X'3e45798ee2308c3b'),
    (X'3e7ad7f29abcaf47'),
    (X'3e7ad7f29abcaf48'),
    (X'3e7ad7f29abcaf49'),
    (X'3eb0c6f7a0b5ed8c'),
    (X'3eb0c6f7a0b5ed8d'),
    (X'3eb0c6f7a0b5ed8e'),
    (X'3ee4f8b588e368ef'),
    (X'3ee4f8b588e368f0'),
    (X'3ee4f8b588e368f1'),
    (X'3f1a36e2eb1c432c'),
    (X'3f1a36e2eb1c432d'),
    (X'3f1a36e2eb1c432e'),
    (X'3f50624dd2f1a9fb'),
    (X'3f50624dd2f1a9fc'),
    (X'3f50624dd2f1a9fd'),
    (X'3f847ae147ae147a'),
    (X'3f847ae147ae147b'),
    (X'3f847ae147ae147c'),
    (X'3fb9999999999999'),
    (X'3fb999999999999a'),
    (X'3fb999999999999b'),
    (X'3feffffffffffff0'),
    (X'3feffffffffffff1'),
    (X'3feffffffffffff2'),
    (X'3feffffffffffff3'),
    (X'3feffffffffffff4'),
    (X'3feffffffffffff5'),
    (X'3feffffffffffff6'),
    (X'3feffffffffffff7'),
    (X'3feffffffffffff8'),
    (X'3feffffffffffff9'),
    (X'3feffffffffffffa'),
    (X'3feffffffffffffb'),
    (X'3feffffffffffffc'),
    (X'3feffffffffffffd'),
    (X'3feffffffffffffe'),
    (X'3fefffffffffffff'),
    (X'3ff0000000000000'),
    (X'3ff0000000000001'),
    (X'3ff0000000000002'),
    (X'3ff0000000000003'),
    (X'3ff0000000000004'),
    (X'3ff0000000000005'),
    (X'3ff0000000000006'),
    (X'3ff0000000000007'),
    (X'3ff0000000000008'),
    (X'3ff0000000000009'),
    (X'3ff921fb54442d18'),
    (X'4005bf0a8b14576a'),
    (X'400921fb54442d18'),
    (X'4023ffffffffffff'),
    (X'4024000000000000'),
    (X'4024000000000001'),
    (X'4058ffffffffffff'),
    (X'4059000000000000'),
    (X'4059000000000001'),
    (X'408f3fffffffffff'),
    (X'408f400000000000'),
    (X'408f400000000001'),
    (X'40c387ffffffffff'),
    (X'40c3880000000000'),
    (X'40c3880000000001'),
    (X'40f869ffffffffff'),
    (X'40f86a0000000000'),
    (X'40f86a0000000001'),
    (X'412e847fffffffff'),
    (X'412e848000000000'),
    (X'412e848000000001'),
    (X'416312cfffffffff'),
    (X'416312d000000000'),
    (X'416312d000000001'),
    (X'4197d783ffffffff'),
    (X'4197d78400000000'),
    (X'4197d78400000001'),
    (X'41cdcd64ffffffff'),
    (X'41cdcd6500000000'),
    (X'41cdcd6500000001'),
    (X'4202a05f1fffffff'),
    (X'4202a05f20000000'),
    (X'4202a05f20000001'),
    (X'42374876e7ffffff'),
    (X'42374876e8000000'),
    (X'42374876e8000001'),
    (X'426d1a94a1ffffff'),
    (X'426d1a94a2000000'),
    (X'426d1a94a2000001'),
    (X'42a2309ce53fffff'),
    (X'42a2309ce5400000'),
    (X'42a2309ce5400001'),
    (X'42d6bcc41e8fffff'),
    (X'42d6bcc41e900000'),
    (X'42d6bcc41e900001'),
    (X'430c6bf52633ffff'),
    (X'430c6bf526340000'),
    (X'430c6bf526340001'),
    (X'4341c37937e07fff'),
    (X'4341c37937e08000'),
    (X'4341c37937e08001'),
    (X'4376345785d89fff'),
    (X'4376345785d8a000'),
    (X'4376345785d8a001'),
    (X'43abc16d674ec7ff'),
    (X'43abc16d674ec800'),
    (X'43abc16d674ec801'),
    (X'43e158e460913cff'),
    (X'43e158e460913d00'),
    (X'43e158e460913d01'),
    (X'4415af1d78b58c3f'),
    (X'4415af1d78b58c40'),
    (X'4415af1d78b58c41'),
    (X'444b1ae4d6e2ef4f'),
    (X'444b1ae4d6e2ef50'),
    (X'444b1ae4d6e2ef51'),
    (X'4480f0cf064dd591'),
    (X'4480f0cf064dd592'),
    (X'4480f0cf064dd593'),
    (X'44b52d02c7e14af5'),
    (X'44b52d02c7e14af6'),
    (X'44b52d02c7e14af7'),
    (X'44ea784379d99db3'),
    (X'44ea784379d99db4'),
    (X'44ea784379d99db5'),
    (X'45208b2a2c280290'),
    (X'45208b2a2c280291'),
    (X'45208b2a2c280292'),
    (X'7feffffffffffffe'),
    (X'7fefffffffffffff'),
    (X'4350000000000002'),
    (X'4350000000002e06'),
    (X'4352000000000003'),
    (X'4352000000000004'),
    (X'4358000000000003'),
    (X'4358000000000004'),
    (X'435f000000000020'),
    (X'c350000000000002'),
    (X'c350000000002e06'),
    (X'c352000000000003'),
    (X'c352000000000004'),
    (X'c358000000000003'),
    (X'c358000000000004'),
    (X'c35f000000000020'),
    (X'42dc12218377de66'),
    (X'42a674e79c5fe51f'),
    (X'4271f71fb04cb74c'),
    (X'423cbe991a145879'),
    (X'4206fee0e1a9e061'),
    (X'41d26580b487e6b4'),
    (X'419d6f34540ca453'),
    (X'41678c29dcd6e9dc'),
    (X'4132d687e3df217d'),
    (X'40fe240c9fcb68c8'),
    (X'40c81cd6e63c53d3'),
    (X'40934a4584fd0fdc'),
    (X'405edd3c07fb4c93'),
    (X'4028b0fcd32f7076'),
    (X'3ff3c0ca428c59f8'),
    (X'3e60000000000000'),
    (X'c352bd2668e077c4'),
    (X'434018601510c000'),
    (X'43d055dc36f24000'),
    (X'43e052961c6f8000'),
    (X'3ff3c0ca2a5b1d5d'),
    (X'4830f0cf064dd592'),
    (X'4840f0cf064dd592'),
    (X'4850f0cf064dd592'),
    (X'3ff3333333333333'),
    (X'3ff3ae147ae147ae'),
    (X'3ff3be76c8b43958'),
    (X'3ff3c083126e978d'),
    (X'3ff3c0c1fc8f3238'),
    (X'3ff3c0c9539b8887'),
    (X'3ff3c0ca2a5b1d5d'),
    (X'3ff3c0ca4283de1b'),
    (X'3ff3c0ca43db770a'),
    (X'3ff3c0ca428abd53'),
    (X'3ff3c0ca428c1d2b'),
    (X'3ff3c0ca428c51f2'),
    (X'3ff3c0ca428c58fc'),
    (X'3ff3c0ca428c59dd'),
    (X'3ff3c0ca428c59f8'),
    (X'3ff3c0ca428c59fb'),
    (X'40112e0be8047a7d'),
    (X'40112e0be815a889'),
    (X'40112e0be826d695'),
    (X'40112e0be83804a1'),
    (X'40112e0be84932ad'),
    (X'0040000000000000'),
    (X'007fffffffffffff'),
    (X'0290000000000000'),
    (X'029fffffffffffff'),
    (X'4350000000000000'),
    (X'435fffffffffffff'),
    (X'1330000000000000'),
    (X'133fffffffffffff'),
    (X'3a6fa7161a4d6e0c')
)
select
  float8send(flt) as ibits,
  flt,
  cast(cast(flt as text) as double precision)
  as r_flt,
  float8send(
    cast(cast(flt as text) as double precision)
  )
  as obits,
  float8send(
    cast(cast(flt as text) as double precision)
  ) =
  float8send(flt)
  as correct
from
  (
    select
      cast(cast(cast(bits as bigint) as xfloat8)
      as double precision)
      as flt
    from
      testdata
    offset 0
  )
  as s;

drop type xfloat8 cascade;
